--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: time-machine
+theme: jekyll-theme-time-machine
 title: Logan's homepage
 description: Bookmark this to keep an eye on my project updates!
